[package]
name = "fs-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "0.32.7", features = ["tokio-comp", "cluster-async"] }
salvo = { version = "0.84.2", features = ["full"] }
sqlx ={ version = "0.8.6", features = ["runtime-tokio", "postgres", "mysql", "sqlite", "any", "uuid", "chrono", "time"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v7"] }
chrono = { version = "0.4.26", features = ["serde"] }
time = { version = "0.3.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
